--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
     <section class="content-header">
-        <h1>Department Section</h1>
+        <h1>Departments</h1>
         <ol class="breadcrumb">
             <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
             <li><a href="javascript:void(0)">Department</a></li>
