Fixes Chat section for agent

--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -132,7 +132,7 @@
                     [appDropdown]="'menu-open'"
                 >
                     <a>
-                        <i class="fa fa-comments"></i> <span>Chat Rooms</span>
+                        <i class="fa fa-comments"></i> <span>Chat Options</span>
                         <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
@@ -140,22 +140,22 @@
                     <ul class="treeview-menu">
                         <li>
                             <a href="/chat/pending">
-                                <i class="fa fa-comment"></i> <span>Pending Chats</span>
+                                <i class="fa fa-comment"></i> <span>New Requests</span>
                             </a>
                         </li>
                         <li>
                             <a href="/chat/ongoing">
-                                <i class="fa fa-comment"></i> <span>Ongoing Chats</span>
+                                <i class="fa fa-comment"></i> <span>Live Sessions</span>
                             </a>
                         </li>
-                        <li>
+                        <!--<li>
                             <a href="/chat/rejected">
-                                <i class="fa fa-comment"></i> <span>Rejected Chats</span>
+                                <i class="fa fa-comment"></i> <span>Rejected</span>
                             </a>
-                        </li>
+                        </li>-->
                         <li>
                             <a href="/chat/resolve">
-                                <i class="fa fa-comment"></i> <span>Resolve Chats</span>
+                                <i class="fa fa-comment"></i> <span>Closed</span>
                             </a>
                         </li>
                     </ul>
