--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -18,7 +18,7 @@
           <div class="box-body">
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
               <div class="row filter">
-                <div class="col-sm-4">
+                <div class="col-sm-4" *ngIf="!(authState | async).isAdmin;">
                   company :
                   <select class='select-option' [(ngModel)]='companySearch'>
                     <option value="">Filter by company</option>
