Fixed department issue

--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -62,7 +62,7 @@
                       >
                         <c-badge>
                           <ng-template let-item="item">
-                            <label style="margin: 0px;">{{item.name}}</label>
+                            <label style="margin: 0px;">{{item.first_name}} {{ item.last_name}}</label>
                           </ng-template>
                         </c-badge>
                       </angular2-multiselect>
