--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
                     [disable-hover]="true"
                     [appDropdown]="'menu-open'"
                 >
-                    <a routerLink="/dashboard">
+                    <a href="/dashboard">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
