--- a/src/app/core/layout/inner-pages/dashboard/dashboard.component.css
+++ b/src/app/core/layout/inner-pages/dashboard/dashboard.component.css
@@ -1,3 +1,7 @@
+.products-list {
+    max-height: 400px;
+    overflow-y: auto;
+}
 .products-list .product-info {
     margin-left: 0;
     display: inline-block;
