--- a/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
@@ -120,6 +120,35 @@
 
 
     </div>
+    <div class="row" *ngIf="(authState | async).isAgent">
+        <div class="col-md-4" *ngIf="!!(showChats() | async).length">
+          <div class="box box-primary">
+            <div class="box-header with-border">
+              <h3 class="box-title">Pending chat requests </h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              <ul class="products-list product-list-in-box">
+                  <ng-container   *ngFor="let contact of (chatState | async).ongoing; let i = index;">
+                <li class="item" *ngIf="contact.status == 1 || contact.status == 6">
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">{{contact.client}}</a>
+                    <span class="product-description">
+                      {{contact.room}} - {{contact.chatTime.date | amFromUtc | amLocal | amTimeAgo}}
+                    </span>
+                  </div>
+                  <div class="button-box">
+                    <button class="btn btn-success" (click)="onSomeMsgAction(2,contact.room)">Accept</button>
+                    <button class="btn btn-danger"  (click)="onSomeMsgAction(3,contact.room)">Reject</button>
+                  </div>
+                </li>
+                  </ng-container>
+              </ul>
+            </div>
+            <!-- /.box-body -->
+          </div>
+        </div>
+    </div>
 
       <!--<div class="row" *ngIf="(authState | async).isAgent">-->
           <!--<div class="col-md-4" *ngIf="!!(showChats() | async).length">-->
@@ -155,35 +184,6 @@
     <!-- /.row -->
   </section>
   <!-- /.content -->
-  <section *ngIf="(authState | async).isAgent">
-    <div class="col-md-4" *ngIf="!!(showChats() | async).length">
-      <div class="box box-primary">
-        <div class="box-header with-border">
-          <h3 class="box-title">Pending chat requests </h3>
-        </div>
-        <!-- /.box-header -->
-        <div class="box-body">
-          <ul class="products-list product-list-in-box">
-              <ng-container   *ngFor="let contact of (chatState | async).ongoing; let i = index;">
-            <li class="item" *ngIf="contact.status == 1 || contact.status == 6">
-              <div class="product-info">
-                <a href="javascript:void(0)" class="product-title">{{contact.client}}</a>
-                <span class="product-description">
-                  {{contact.room}} - {{contact.chatTime.date | amFromUtc | amLocal | amTimeAgo}}
-                </span>
-              </div>
-              <div class="button-box">
-                <button class="btn btn-success" (click)="onSomeMsgAction(2,contact.room)">Accept</button>
-                <button class="btn btn-danger"  (click)="onSomeMsgAction(3,contact.room)">Reject</button>
-              </div>
-            </li>
-              </ng-container>
-          </ul>
-        </div>
-        <!-- /.box-body -->
-      </div>
-    </div>
-  </section>
 
   <!--<section class="content">-->
     <!--&lt;!&ndash; Info boxes &ndash;&gt;-->
