changed chat labels

--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -1,9 +1,9 @@
 <div class="content-wrapper">
     <section class="content-header">
-        <h1>Ongoing Chats</h1>
+        <h1>Live Sessions</h1>
         <ol class="breadcrumb">
             <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="javascript:void(0)">Ongoing Chats</a></li>
+            <li><a href="javascript:void(0)">Live Sessions</a></li>
             <li class="active">Chat</li>
         </ol>
     </section>
@@ -159,7 +159,7 @@
                         <div class="row">
                             <div class="box box-primary">
                                 <div class="box-body" *ngIf="!(showChats() | async).length">
-                                    <h4>No Ongoing Chats at this Moment!</h4>
+                                    <h4>No live sessions at this Moment!</h4>
                                 </div>
                             </div>
                         </div>
