--- a/src/app/core/layout/inner-pages/chat/pending/pending.component.html
+++ b/src/app/core/layout/inner-pages/chat/pending/pending.component.html
@@ -1,9 +1,9 @@
 <div class="content-wrapper">
     <section class="content-header">
-        <h1>Pending Chats</h1>
+        <h1>New Requests</h1>
         <ol class="breadcrumb">
             <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="javascript:void(0)">Pending Chats</a></li>
+            <li><a href="javascript:void(0)">New Requests</a></li>
             <li class="active">Chat</li>
         </ol>
     </section>
@@ -76,7 +76,7 @@
                         <div class="row">
                             <div class="box box-primary">
                                 <div class="box-body" *ngIf="!(showChats() | async).length">
-                                    <h4>No Pending Chats at this Moment!</h4>
+                                    <h4>No new requests at this Moment!</h4>
                                 </div>
                             </div>
                         </div>
