--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -9,7 +9,7 @@
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top">
     <!-- Sidebar toggle button-->
-    <a class="sidebar-toggle" (click)="toggleLeftSidebar()" data-toggle="push-menu" role="button">
+    <a class="sidebar-toggle" (click)="toggleLeftSidebar($event)" data-toggle="push-menu" role="button">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -18,90 +18,6 @@
 
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
-        <!-- Messages: style can be found in dropdown.less-->
-        <!--<li class="dropdown messages-menu" [appDropdown]="'open'">-->
-          <!--<a class="dropdown-toggle" data-toggle="dropdown">-->
-            <!--<i class="fa fa-envelope-o"></i>-->
-            <!--<span class="label label-success">4</span>-->
-          <!--</a>-->
-          <!--<ul class="dropdown-menu">-->
-            <!--<li class="header">You have 4 messages</li>-->
-            <!--<li>-->
-              <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
-              <!--<ul class="menu">-->
-                <!--<li>&lt;!&ndash; start message &ndash;&gt;-->
-                  <!--<a>-->
-                    <!--<div class="pull-left">-->
-                      <!--<img src="../../../../assets/img/avatar5.png" class="img-circle" alt="User Image">-->
-                    <!--</div>-->
-                    <!--<h4>-->
-                      <!--Support Team-->
-                      <!--<small><i class="fa fa-clock-o"></i> 5 mins</small>-->
-                    <!--</h4>-->
-                    <!--<p>Why not buy a new awesome theme?</p>-->
-                  <!--</a>-->
-                <!--</li>-->
-                <!--&lt;!&ndash; end message &ndash;&gt;-->
-              <!--</ul>-->
-            <!--</li>-->
-            <!--<li class="footer"><a>See All Messages</a></li>-->
-          <!--</ul>-->
-        <!--</li> Dont Need this now -->
-
-        <!-- Notifications: style can be found in dropdown.less -->
-        <!--<li class="dropdown notifications-menu" [appDropdown]="'open'">-->
-          <!--<a class="dropdown-toggle" data-toggle="dropdown">-->
-            <!--<i class="fa fa-bell-o"></i>-->
-            <!--<span class="label label-warning">10</span>-->
-          <!--</a>-->
-          <!--<ul class="dropdown-menu">-->
-            <!--<li class="header">You have 10 notifications</li>-->
-            <!--<li>-->
-              <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
-              <!--<ul class="menu">-->
-                <!--<li>-->
-                  <!--<a>-->
-                    <!--<i class="fa fa-users text-aqua"></i> 5 new members joined today-->
-                  <!--</a>-->
-                <!--</li>-->
-              <!--</ul>-->
-            <!--</li>-->
-            <!--<li class="footer"><a>View all</a></li>-->
-          <!--</ul>-->
-        <!--</li> Dont need this now -->
-
-        <!-- Tasks: style can be found in dropdown.less -->
-        <!--<li class="dropdown tasks-menu" [appDropdown]="'open'">-->
-          <!--<a class="dropdown-toggle" data-toggle="dropdown">-->
-            <!--<i class="fa fa-flag-o"></i>-->
-            <!--<span class="label label-danger">9</span>-->
-          <!--</a>-->
-          <!--<ul class="dropdown-menu">-->
-            <!--<li class="header">You have 9 tasks</li>-->
-            <!--<li>-->
-              <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
-              <!--<ul class="menu">-->
-                <!--<li>&lt;!&ndash; Task item &ndash;&gt;-->
-                  <!--<a>-->
-                    <!--<h3>-->
-                      <!--Design some buttons-->
-                      <!--<small class="pull-right">20%</small>-->
-                    <!--</h3>-->
-                    <!--<div class="progress xs">-->
-                      <!--<div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">-->
-                        <!--<span class="sr-only">20% Complete</span>-->
-                      <!--</div>-->
-                    <!--</div>-->
-                  <!--</a>-->
-                <!--</li>-->
-                <!--&lt;!&ndash; end task item &ndash;&gt;-->
-              <!--</ul>-->
-            <!--</li>-->
-            <!--<li class="footer">-->
-              <!--<a>View all tasks</a>-->
-            <!--</li>-->
-          <!--</ul>-->
-        <!--</li> Dont Need This Now -->
 
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu" [appDropdown]="'open'">
@@ -119,21 +35,6 @@
                 <small></small>
               </p>
             </li>
-            <!-- Menu Body -->
-            <!--<li class="user-body">-->
-              <!--<div class="row">-->
-                <!--<div class="col-xs-4 text-center">-->
-                  <!--<a>Followers</a>-->
-                <!--</div>-->
-                <!--<div class="col-xs-4 text-center">-->
-                  <!--<a>Sales</a>-->
-                <!--</div>-->
-                <!--<div class="col-xs-4 text-center">-->
-                  <!--<a>Friends</a>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</li>-->
-            <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-left">
                 <a class="btn btn-default btn-flat" routerLink="/profile"> Profile</a>
@@ -144,11 +45,6 @@
             </li>
           </ul>
         </li>
-
-        <!-- Control Sidebar Toggle Button -->
-        <!--<li>-->
-          <!--<a data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>-->
-        <!--</li> Dont need this now -->
       </ul>
     </div>
   </nav>
